[gd_scene load_steps=10 format=3 uid="uid://pmxo0fjrnv3d"]

[ext_resource type="Script" path="res://Main/settings_menu.gd" id="1_77qq5"]
[ext_resource type="FontFile" uid="uid://cfopgy60lxb3a" path="res://fonts/BACKTO1982.TTF" id="1_h6u3u"]
[ext_resource type="Texture2D" uid="uid://dt46vpvc21y2l" path="res://PixelCard_Assets/Cards/Card_Back_Blue_New.png" id="2_h2igu"]
[ext_resource type="Texture2D" uid="uid://be03mvjxamnmh" path="res://PixelCard_Assets/Cards/Card_Back_Dark-green_New.png" id="3_1ypdl"]
[ext_resource type="Texture2D" uid="uid://dy4orcl2tbkm5" path="res://PixelCard_Assets/Cards/Card_Back_Green_New.png" id="4_sesot"]
[ext_resource type="Texture2D" uid="uid://5cgplrxvvlkf" path="res://PixelCard_Assets/Cards/Card_Back_Pink_New.png" id="5_vlkhk"]
[ext_resource type="Texture2D" uid="uid://qrkw2x63pmyf" path="res://PixelCard_Assets/Cards/Card_Back_Red_New.png" id="6_akqkb"]
[ext_resource type="Texture2D" uid="uid://cs5chkbk8nlib" path="res://PixelCard_Assets/Cards/Card_Back_Yellow_New.png" id="7_8ksbr"]

[sub_resource type="LabelSettings" id="LabelSettings_e1cor"]
font = ExtResource("1_h6u3u")
font_size = 50
outline_color = Color(0.658824, 0.521569, 0.215686, 1)
shadow_color = Color(0, 0, 0, 1)

[node name="Settings_Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_77qq5")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 0
offset_left = 36.0
offset_top = 54.0
offset_right = 702.0
offset_bottom = 447.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 2.08165e-12)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"
label_settings = SubResource("LabelSettings_e1cor")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_h2igu")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Click to change the color of the cards"

[node name="CardBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Blue" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox"]
layout_mode = 2
icon = ExtResource("2_h2igu")

[node name="Dark_Green" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox"]
layout_mode = 2
icon = ExtResource("3_1ypdl")

[node name="Light_Green" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox"]
layout_mode = 2
icon = ExtResource("4_sesot")

[node name="Pink" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox"]
layout_mode = 2
icon = ExtResource("5_vlkhk")

[node name="Red" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox"]
layout_mode = 2
icon = ExtResource("6_akqkb")

[node name="Yellow" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox"]
layout_mode = 2
icon = ExtResource("7_8ksbr")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="Card_selected" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="music" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Music_Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/music"]
layout_mode = 2
text = "<<"

[node name="Music_Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/music"]
layout_mode = 2
text = "Song Name"

[node name="Music_Forward" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/music"]
layout_mode = 2
text = ">>"

[node name="Back_Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 220)
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox/Dark_Green" to="." method="_on_dark_green_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox/Light_Green" to="." method="_on_light_green_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox/Pink" to="." method="_on_pink_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CardBox/Yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/music/Music_Back" to="." method="_on_music_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/music/Music_Forward" to="." method="_on_music_forward_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Back_Button" to="." method="_on_back_button_pressed"]
